[gd_scene load_steps=7 format=3 uid="uid://drxw8a26y8m5x"]

[ext_resource type="PackedScene" uid="uid://c8l60rnugru40" path="res://addons/godot-xr-tools/objects/pickable.tscn" id="1"]
[ext_resource type="Script" path="res://tensegrityexperiments/PickableWire.gd" id="2"]

[sub_resource type="BoxShape3D" id="4"]
size = Vector3(0.01, 0.01, 1)

[sub_resource type="CylinderMesh" id="6"]
resource_local_to_scene = true
top_radius = 0.01
bottom_radius = 0.01
height = 1.0
radial_segments = 4
rings = 0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_4ahjj"]
albedo_color = Color(1, 1, 0.466667, 1)

[sub_resource type="CylinderMesh" id="5"]
resource_local_to_scene = true
top_radius = 0.01
bottom_radius = 0.01
height = 1.0
radial_segments = 4
rings = 0

[node name="Wire" instance=ExtResource("1")]
collision_layer = 4096
collision_mask = 4096
script = ExtResource("2")
min_wirelength = 0.4
ranged_grab_method = 2

[node name="CollisionShape3D" parent="." index="0"]
shape = SubResource("4")

[node name="SMeshWire" type="Node3D" parent="." index="1"]

[node name="MeshWire" type="MeshInstance3D" parent="SMeshWire" index="0"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
mesh = SubResource("6")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("StandardMaterial3D_4ahjj")

[node name="SMeshWire2" type="Node3D" parent="." index="2"]

[node name="MeshWire2" type="MeshInstance3D" parent="SMeshWire2" index="0"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
mesh = SubResource("5")
skeleton = NodePath("../..")

[connection signal="highlight_updated" from="." to="." method="_on_PickableStrut_highlight_updated"]
